--- a/index.html
+++ b/index.html
@@ -130,3 +130,10 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<!-- Секция контактов -->
+<footer id="contact">
+  <h2>Контакты</h2>
+  <p>Электронная почта: dako.kalmakhan.02@gmail.com</p>
+  <p>Телефон: +7 747 530 4811</p>
+</footer>
